Frontend para el Api de experimental-test-backend
Practicando, recordando componentes, orden, variables de entorno y bootstap

--- a/src/index.scss
+++ b/src/index.scss
@@ -5,6 +5,7 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background-image: linear-gradient(to right, #ADA996, #F2F2F2, #DBDBDB, #EAEAEA);
 }
 
 code {
